--- a/src/renderer/ui/containers/AppContent/pages/messages/pages/chat/style/index.scss
+++ b/src/renderer/ui/containers/AppContent/pages/messages/pages/chat/style/index.scss
@@ -5,8 +5,6 @@
   align-items: stretch;
   gap: 10px;
   flex-grow: 1;
-  width :70%;
-  height: 95vh;
 
   > .chat-header {
     display: flex;
